@@ -25,7 +25,7 @@ public class BTreeDelete<T extends Comparable<T>> {
 
         if (bTree.getRoot().keys.isEmpty()) {
             if (!bTree.getRoot().isLeaf()) {
-                bTree.setRoot(bTree.getRoot().children.get(0));
+                bTree.setRoot(bTree.getRoot().children.getFirst());
             } else {
                 bTree.setRoot(null);
             }
@@ -62,7 +62,6 @@ public class BTreeDelete<T extends Comparable<T>> {
 
     private void deleteFromInternalNode(BTreeNode<T> node, int idx) {
         T key = node.keys.get(idx);
-        System.out.println("Deleting key from internal node: " + key);
         BTreeNode<T> left = node.children.get(idx);
         BTreeNode<T> right = node.children.get(idx + 1);
 
@@ -71,7 +70,6 @@ public class BTreeDelete<T extends Comparable<T>> {
             T successor = getSuccessor(right);
             int successorIndex = right.keys.indexOf(successor);
             List<Long> successorPointers = new ArrayList<>(right.pointers.get(successorIndex));
-            System.out.println("Replacing with successor: " + successor);
             node.keys.set(idx, successor);
             node.pointers.set(idx, successorPointers);
             deleteRecursive(right, successor);
@@ -79,41 +77,9 @@ public class BTreeDelete<T extends Comparable<T>> {
             T predecessor = getPredecessor(left);
             int predecessorIndex = left.keys.indexOf(predecessor);
             List<Long> predecessorPointers = new ArrayList<>(left.pointers.get(predecessorIndex));
-            System.out.println("Replacing with predecessor: " + predecessor);
             node.keys.set(idx, predecessor);
             node.pointers.set(idx, predecessorPointers);
             deleteRecursive(left, predecessor);
-        } else {
-            System.out.println("Merging nodes");
-            mergeNodes(node, idx);
-            deleteRecursive(left, key);
-        }
-    }
-
-    private void deleteFromInternalNode2(BTreeNode<T> node, int idx) {
-        T key = node.keys.get(idx);
-
-        BTreeNode<T> left = node.children.get(idx);
-        BTreeNode<T> right = node.children.get(idx + 1);
-
-        if (left.keys.size() >= t) {
-            T predecessor = getPredecessor(left);
-            int predecessorIndex = left.keys.indexOf(predecessor);
-            List<Long> predecessorPointers = new ArrayList<>(left.pointers.get(predecessorIndex));
-
-            node.keys.set(idx, predecessor);
-            node.pointers.set(idx, predecessorPointers);
-
-            deleteRecursive(left, predecessor);
-        } else if (right.keys.size() >= t) {
-            T successor = getSuccessor(right);
-            int successorIndex = right.keys.indexOf(successor);
-            List<Long> successorPointers = new ArrayList<>(right.pointers.get(successorIndex));
-
-            node.keys.set(idx, successor);
-            node.pointers.set(idx, successorPointers);
-
-            deleteRecursive(right, successor);
         } else {
             mergeNodes(node, idx);
             deleteRecursive(left, key);
@@ -122,16 +88,16 @@ public class BTreeDelete<T extends Comparable<T>> {
 
     private T getPredecessor(BTreeNode<T> node) {
         while (!node.isLeaf()) {
-            node = node.children.get(node.children.size() - 1);
+            node = node.children.getLast();
         }
-        return node.keys.get(node.keys.size() - 1);
+        return node.keys.getLast();
     }
 
     private T getSuccessor(BTreeNode<T> node) {
         while (!node.isLeaf()) {
-            node = node.children.get(0);
+            node = node.children.getFirst();
         }
-        return node.keys.get(0);
+        return node.keys.getFirst();
     }
 
     private void fixChild(BTreeNode<T> parent, int idx) {
@@ -152,15 +118,15 @@ public class BTreeDelete<T extends Comparable<T>> {
         BTreeNode<T> child = parent.children.get(idx);
         BTreeNode<T> leftSibling = parent.children.get(idx - 1);
 
-        child.keys.add(0, parent.keys.get(idx - 1));
-        child.pointers.add(0, parent.pointers.get(idx - 1));
+        child.keys.addFirst(parent.keys.get(idx - 1));
+        child.pointers.addFirst(parent.pointers.get(idx - 1));
 
         if (!child.isLeaf()) {
-            child.children.add(0, leftSibling.children.remove(leftSibling.children.size() - 1));
+            child.children.addFirst(leftSibling.children.removeLast());
         }
 
-        parent.keys.set(idx - 1, leftSibling.keys.remove(leftSibling.keys.size() - 1));
-        parent.pointers.set(idx - 1, leftSibling.pointers.remove(leftSibling.pointers.size() - 1));
+        parent.keys.set(idx - 1, leftSibling.keys.removeLast());
+        parent.pointers.set(idx - 1, leftSibling.pointers.removeLast());
     }
 
     private void borrowFromRight(BTreeNode<T> parent, int idx) {
@@ -171,11 +137,11 @@ public class BTreeDelete<T extends Comparable<T>> {
         child.pointers.add(parent.pointers.get(idx));
 
         if (!child.isLeaf()) {
-            child.children.add(rightSibling.children.remove(0));
+            child.children.add(rightSibling.children.removeFirst());
         }
 
-        parent.keys.set(idx, rightSibling.keys.remove(0));
-        parent.pointers.set(idx, rightSibling.pointers.remove(0));
+        parent.keys.set(idx, rightSibling.keys.removeFirst());
+        parent.pointers.set(idx, rightSibling.pointers.removeFirst());
     }
 
     private void mergeNodes(BTreeNode<T> parent, int idx) {
@@ -200,10 +166,5 @@ public class BTreeDelete<T extends Comparable<T>> {
         }
         return idx;
     }
+
 }
-
-
-
-
-
-
